[gd_scene load_steps=2 format=2]

[ext_resource path="res://HttpButtonTest.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="dotButton" type="Button" parent="."]
anchor_left = 0.34
anchor_top = 0.349
anchor_right = 0.41
anchor_bottom = 0.383
margin_left = -0.342316
margin_top = 0.140076
margin_right = -0.0223389
margin_bottom = -0.259918
text = "Get Dot Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dotHTMLReq" type="HTTPRequest" parent="."]
[connection signal="pressed" from="dotButton" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="dotHTMLReq" to="." method="_on_request_completed"]
